# assortativity

./: .gitignore  .gitmodules  README.md  build.sh  docker-compose.yml  experiments.py  konect.py  package-data.sh
R/: .gitignore  .lintr  .renvignore  assortativity-gen.R  assortativity-real.R  create-many-additional-plots.sh  create-plots.sh  degree_distr.R  degree_distr_all.R  degree_distr_selected.R  real-table.R
R/helper/: load_dependencies.R  load_helpers.R  read_data.R  theme.R
cpp/: .gitignore  CMakeLists.txt
cpp/cli/: chung_lu.cpp  degree_distribution.cpp  edge_degrees.cpp  girg.cpp  joint_degree_distr.cpp  joint_histogram.cpp  random_graph.cpp  run_tests.cpp  stats.cpp
cpp/include/: edge_list.hpp  girg.hpp  histogram.hpp  kendall.hpp  pearson.hpp  random_graph.hpp  spearman.hpp  timer.hpp  types.hpp
cpp/src/: edge_list.cpp  histogram.cpp  ipe.cpp  kendall.cpp  pearson.cpp  random_graph.cpp  spearman.cpp  timer.cpp  types.cpp
docker/: set_user_group.sh  welcome_eval.sh  welcome_experiments.sh
docker/eval/: Dockerfile
docker/experiments/: Dockerfile
input_data/: .gitignore
input_data/konect-download/: downloader.sh
input_data/power-law-networks/: .gitignore  README.md  directed_bipartite.csv  power-law-networks-undirected.csv  undirected.csv
notes/agirg-generator/: .gitignore  agirg-generator.tex
vis/: .gitignore  aggregate.sh
